🖼️ Enhance transformer with real image fetching from Unsplash API
- Added async getImageUrl method with Unsplash API integration
- Implemented intelligent keyword extraction for relevant images
- Added fallback images for each category if API fails
- Updated transformMarket and transformMarkets to handle async operations
- Added environment variable for Unsplash API key
- Will make betcha app look incredibly professional with real images

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 
 # App Configuration
 EXPO_PUBLIC_ENVIRONMENT=development
+
+# Unsplash API for high-quality images
+EXPO_PUBLIC_UNSPLASH_API_KEY=your_unsplash_api_key_here
+
+# Unsplash API for high-quality images
+EXPO_PUBLIC_UNSPLASH_API_KEY=your_unsplash_api_key_here
