🔗 Update Kalshi client to use main trading API with authentication
- Changed from elections API to main Kalshi trading API
- Added proper Bearer token authentication
- Enhanced error handling with detailed error messages
- Added new methods: order book, market history, API status
- Improved market filtering and sorting
- Added timeout and better request handling
- Added environment variable for Kalshi API key
- Ready for production-grade market data integration

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ EXPO_PUBLIC_ENVIRONMENT=development
 
 # Unsplash API for high-quality images
 EXPO_PUBLIC_UNSPLASH_API_KEY=Wga2Fpxbw--TZ1TeVi3JuPED2-2Zf1E2iTZwoMboRsoe42BzksgaRXVUKSd3QK6u5HtvYWSbvnrdPRAOG-zXek
+
+# Kalshi API for market data
+EXPO_PUBLIC_KALSHI_API_KEY=your_kalshi_api_key_here
