Major app redesign: Enhanced HomeTab with white theme, card actions, and tab navigation
- Complete HomeTab redesign with clean white background
- Added card action buttons (Heart, Comment, Share) with animations
- Implemented double-tap to like functionality with persistence
- Enhanced swipe gestures with 30px sensitivity + velocity detection
- Added tab navigation (Home, Inbox, Profile) with custom styling
- Improved visual hierarchy, spacing, and typography
- Added compact number formatting (1K, 10K) for large values
- Optimized animations with better spring physics
- Created placeholder Inbox screen for future features
- Streamlined currency system and improved user experience

--- a/app.json
+++ b/app.json
@@ -1,29 +1,36 @@
 {
   "expo": {
-    "name": "betcha",
+    "name": "Betcha",
     "slug": "betcha",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "icon": "./assets/b2-appicon.png",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/newbetcha-transparent.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0B0B0F"
+      "backgroundColor": "#000000"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.betcha.app",
+      "icon": "./assets/b2-appicon.png",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#0B0B0F"
+        "foregroundImage": "./assets/b2-appicon.png",
+        "backgroundColor": "#000000"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.betcha.app",
+      "versionCode": 1
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/b2-appicon.png"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "scheme": "betcha"
   }
 }
