--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
     "expo-auth-session": "^6.2.1",
+    "expo-blur": "^14.1.5",
     "expo-crypto": "^14.1.5",
-    "expo-haptics": "^14.1.4",
-    "expo-image": "^2.4.0",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.4.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-router": "^5.1.4",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "lottie-react-native": "^7.3.2",
+    "lucide-react-native": "^0.539.0",
     "react": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
+    "react-native-deck-swiper": "^2.0.19",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
